# slothcv

./: .gitignore  AGENT.md  README.md  index.html  metadata.json  package-lock.json  package.json  splashscreen.html  vite.config.ts
src/: App.tsx  constants.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: artifact.rs  lib.rs  llm.rs  main.rs  settings.rs  storage.rs
src/artifact/: Preview.tsx  types.ts  utils.ts
src/components/: CanvasPreview.tsx  ChatInputArea.tsx  ConfirmModal.tsx  MessageList.tsx  PreviewPanel.tsx  SettingsModal.tsx  Sidebar.tsx  TitleBar.tsx
src/hooks/: useAgentPlayground.ts  useLlm.ts  useResizable.ts  useSession.ts
src/services/: llm.ts  settings.ts  storage.ts
