[package]
name = "slothcv"
version = "0.1.0"
edition = "2021"

[lib]
name = "slothcv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "native-tls"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
urlencoding = "2.1"
